--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="icon" type="image/x-icon" href="../src/assets/images/main_logo.png"> -->
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
