--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,5 @@
     </app-root>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
-
+<!-- AIzaSyBLxCfDzVzJ9PKqZnsM10M3MhE2C-S9V9k -->
 </html>
